Message valid check

--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -39,7 +39,7 @@
       class="form-control"
     />
     @if (registerForm.errors?.['mismatch']) {
-    <div class="text-danger mt-1">Passwords do not match.</div>
+    <small class="text-danger mt-1">Confirm password does not match the password.</small>
     }
   </div>
 
