translate module and code format

--- a/src/app/components/menu-tab-item/menu-tab-item.html
+++ b/src/app/components/menu-tab-item/menu-tab-item.html
@@ -4,25 +4,28 @@
     [ngClass]="filterType === 'all' ? 'btn-primary' : 'btn-outline-primary'"
     (click)="applyFilter('all')"
   >
-    All
+    {{ 'ALL' | translate }}
   </button>
   <button
     class="btn btn-sm"
     [ngClass]="filterType === 'veg' ? 'btn-success' : 'btn-outline-success'"
     (click)="applyFilter('veg')"
   >
-    Veg
+    {{ 'VEG' | translate }}
   </button>
   <button
     class="btn btn-sm"
     [ngClass]="filterType === 'nonveg' ? 'btn-danger' : 'btn-outline-danger'"
     (click)="applyFilter('nonveg')"
   >
-    Non-Veg
+    {{ 'NONVEG' | translate }}
   </button>
 </div>
-@for (item of filteredDishes; track $index) {
+
+@if (filteredDishes.length === 0) {
+<p class="text-center">No dishes available</p>
+}@else { @for (item of filteredDishes; track $index) {
 <div class="py-3" [class.border-bottom]="!$last">
-  <app-dish-card [dish]="item"></app-dish-card>
+  <app-dish-card [dish]="item" (onUpdateQuantity)="handleQuantityChange($event)"></app-dish-card>
 </div>
-}
+} }
