--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -8,7 +8,7 @@
       <small
         class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
       >
-        {{ cartCount }}
+        {{ cartQuantityCount }}
       </small>
     </div>
   </a>
