--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -1,12 +1,34 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <!-- Email Field -->
   <div class="mb-3">
-    <label for="userName" class="form-label">Username *</label>
-    <input type="text" id="userName" formControlName="userName" class="form-control" />
-    <p class="small text-danger mt-1" *ngIf="userNameError">{{ userNameError }}</p>
+    <label for="email" class="form-label">{{ 'EMAIL' | translate }} *</label>
+    <input
+      type="email"
+      id="email"
+      formControlName="email"
+      class="form-control"
+      [class.is-invalid]="email?.touched && email?.invalid"
+      [placeholder]="`ENTER_YOUR_EMAIL`| translate"
+    />
+    <div class="invalid-feedback">{{ emailError | translate }}</div>
   </div>
+
+  <!-- Password Field -->
   <div class="mb-3">
-    <label for="password" class="form-label">Password *</label>
-    <input type="password" id="password" formControlName="password" class="form-control" />
+    <label for="password" class="form-label">{{ 'PASSWORD' | translate }} *</label>
+    <input
+      type="password"
+      id="password"
+      formControlName="password"
+      class="form-control"
+      [class.is-invalid]="password?.touched && password?.invalid"
+      [placeholder]="`ENTER_YOUR_PASSWORD`| translate"
+    />
+    <div class="invalid-feedback">{{ passwordError | translate }}</div>
   </div>
-  <button type="submit" class="btn btn-primary w-100" [disabled]="!loginForm.valid">Login</button>
+
+  <!-- Submit Button -->
+  <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid">
+    {{`LOGIN`| translate}}
+  </button>
 </form>
