--- a/src/app/layouts/root-layout/root-layout.html
+++ b/src/app/layouts/root-layout/root-layout.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <main class="p-2">
-  <div class="row m-0 justify-content-center">
+  <div class="row m-0 justify-content-center g-0">
     <div class="col-12 col-lg-9 col-md">
       <router-outlet></router-outlet>
     </div>
