--- a/src/app/pages/authentication/authentication.html
+++ b/src/app/pages/authentication/authentication.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row justify-content-center min-vh-100 align-items-center">
-    <div class="col-lg-6 col-md-8 col-sm-10">
+    <div class="col-lg-4 col-md-8 col-sm-10">
       <div class="card shadow-sm p-4">
         <h3 class="text-center mb-4 border-bottom py-1">
-          {{ isLoginMode ? 'Login' : 'Create Account' }}
+          {{ (isLoginMode ? 'LOGIN' : 'CREAT_NEW_ACCOUNT') | translate }}
         </h3>
 
         <!-- Login Form -->
@@ -17,7 +17,7 @@
 
         <div class="text-center mt-3">
           <a (click)="toggleMode()" class="nav-underline link">
-            {{ isLoginMode ? 'Create new account?' : 'Already have an account?' }}
+            {{ (isLoginMode ? 'CREAT_NEW_ACCOUNT' : 'EXISTS_ACCOUNT') | translate }}
           </a>
         </div>
       </div>
