--- a/src/app/pages/cart/cart.html
+++ b/src/app/pages/cart/cart.html
@@ -6,32 +6,35 @@
       </div>
     </a>
 
-    <p class="h4 text-center flex-grow-1">Your Cart</p>
+    <p class="h4 text-center flex-grow-1">{{ 'YOUR_CART' | translate }}</p>
   </div>
 
   <div class="d-flex flex-column gap-1">
     @for (cartItem of cartItems; track $index) {
     <div class="py-3" [class.border-bottom]="!$last">
-      <app-dish-card [dish]="cartItem"></app-dish-card>
+      <app-dish-card
+        [dish]="cartItem"
+        (onUpdateQuantity)="handleQuantityChange($event)"
+      ></app-dish-card>
     </div>
     }
   </div>
   <div class="border-bottom my-3"></div>
   <div class="row justify-content-end m-0">
-    <div class="col-12 col-md-5 col-lg-3">
+    <div class="col-12 col-md-5 col-lg-4">
       <div class="w-100 card">
         <div class="card-body">
-          <h5 class="card-title">Cart total</h5>
+          <h5 class="card-title">{{ 'CART_TOTAL' | translate }}</h5>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <div class="row justify-content-between">
-                <div class="col-auto">Sub Total</div>
+              <div class="row justify-content-between flex-nowrap">
+                <div class="col-auto">{{ 'SUB_TOTAL' | translate }}</div>
                 <div class="col-auto">{{ totalPrice }} SAR</div>
               </div>
             </li>
             <li class="list-group-item">
               <div class="row justify-content-between">
-                <div class="col-auto">Total</div>
+                <div class="col-auto">{{ 'TOTAL' | translate }}</div>
                 <div class="col-auto">{{ totalPrice }} SAR</div>
               </div>
             </li>
@@ -39,7 +42,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-end w-100 mt-2">
-        <button class="btn btn-primary btn-sm">Place the order</button>
+        <button class="btn btn-primary btn-sm">{{ 'PLACE_ORDER' | translate }}</button>
       </div>
     </div>
   </div>
