--- a/src/app/pages/not-found/not-found.html
+++ b/src/app/pages/not-found/not-found.html
@@ -5,5 +5,5 @@
     The page you are looking for might have been removed, had its name changed, or is temporarily
     unavailable.
   </p>
-  <a routerLink="menu" class="btn btn-primary mt-3">Go to Homepage</a>
+  <a routerLink="/menu" class="btn btn-primary mt-3">Go to Homepage</a>
 </div>
